<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_blue"
    android:orientation="vertical"
    tools:context=".QuestionC">

    <TextView
        android:id="@+id/QuestionNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/question_number"
        android:textAlignment="center"
        android:textColor="#7513ee"
        android:textSize="20dp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="45dp"
        android:gravity="center"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/question"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/questionC_1"
            android:textColor="#0000fd"
            android:textSize="25dp"
            android:textStyle="bold"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/FirstTwoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/optionA"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00fe00"
            android:paddingTop="10dp"
            android:text="@string/questionC_1A"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="#272343"/>

        <TextView
            android:id="@+id/optionB"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#00fe00"
            android:paddingTop="10dp"
            android:text="@string/questionC_1B"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="#272343">

        </TextView>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/RemainingTwoOption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="30dp"
        android:orientation="vertical"
        android:paddingLeft="50dp"
        android:paddingRight="50dp">

        <TextView
            android:id="@+id/optionC"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#00fe00"
            android:paddingTop="10dp"
            android:text="@string/questionC_1C"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="#272343"/>

        <TextView
            android:id="@+id/optionD"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="10dp"
            android:background="#00fe00"
            android:paddingTop="14dp"
            android:text="@string/questionC_1D"
            android:textAlignment="center"
            android:textSize="18dp"
            android:textColor="#272343" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/selectoption"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/selectedoption"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textColor="@android:color/holo_red_dark" />

        <TextView
            android:id="@+id/CorrectAnswer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/correctanswer"
            android:textAlignment="center"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:textSize="15dp"
            android:textColor="#0000fd" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="10dp"
            android:text="@string/score"
            android:textColor="#7513ee"
            android:textSize="25dp"
            android:textStyle="bold" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:indeterminate="false"/>

    </LinearLayout>

</LinearLayout>